[tool.poetry]
name = "xepa-service"
version = "0.1.0"
description = "API for Xepa App"
authors = ["João Pedro Chagas <jpchagas@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
SQLAlchemy = "^1.4.40"
PyMySQL = "^1.0.2"
pytest = "^7.1.2"
cryptography = "^37.0.4"
black = "^22.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
